may commit שימו לב לשינוים והערות  בנוסף צריך לבצע שינויים בDB
